# ComplianceRos

./: ComplianceRos.pro  README.md
centauro_control/: CMakeLists.txt  README.md  package.xml  setup.py
centauro_control/config/: centauro_pd_gains.yaml  centauro_zero_gains.yaml  compliance_gains_high.yaml  compliance_gains_high_new.yaml  compliance_gains_low.yaml  compliance_gains_medium.yaml  compliance_gains_static.yaml  compliance_gains_static_2.yaml  test.yaml  test_lower.yaml  test_lower2.yaml
centauro_control/launch/: centauro_control.launch
centauro_control/nodes/: collision_test  computeErrors  log_data  trajectory.launch
centauro_control/nodes/compliance/: colliding_forearms  collision_avoidance_init  mammal_1  mammal_2  mammal_3  mammal_like  moving_arms  moving_arms_varying_frequencies  new_mammal_like  raise_rear_leg  spider  spider_2  standing_position  upper_1  upper_2  upper_3  velocity_mammal_like  wheels  zero
centauro_control/nodes/pd/: centauro_setActuatorsComp_oneTopic_pd  centauro_setActuatorsComp_oneTopic_pd_2
custom_controller/: CMakeLists.txt  README.md  custom_controller_plugins.xml  package.xml
custom_controller/include/custom_controller/: actuator_position_controller1.h  actuator_position_controller4.h  actuator_position_controller_all.h  (+3 more)
custom_controller/nodes/: SaveData  SaveData_gazebo  test
custom_controller/src/: actuator_position_controller1.cpp  actuator_position_controller4.cpp  actuator_position_controller_all.cpp  actuator_position_controller_classes.cpp  actuator_velocity_controller.cpp  controller_utils.cpp
custom_messages/: CMakeLists.txt  README.md  package.xml
custom_messages/msg/: CommandMsg.msg  ControllerMsg.msg  CustomCmnd.msg  GroupControllerMsg.msg  GroupJointControllerStateMsg.msg  StateMsg.msg  package.xml
custom_services/: CMakeLists.txt  package.xml
custom_services/srv/: computePayloadEstimate.srv  getJointNames.srv  jointStateCmnd.srv  loadGains.srv  updateGains.srv  updatePDGains.srv  updatePrint.srv
